--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </main>
   <div id="popup"></div>
   <footer>
-    <a class="" href="" target="_blank">참고:</a>
+    <a href="https://gall.dcinside.com/p_color/78162" target="_blank">→ Reference</a>
   </footer>
   <script type="text/javascript">
     const popup = document.getElementById('popup');
@@ -116,16 +116,16 @@
     darkgrayish.style.backgroundColor = v_darkgrayish;
 
     upup.onclick = function() {
-      location.search = "?hue=" + (hue + 8);
+      location.search = "?hue=" + (hue + 10);
     }
     up.onclick = function() {
-      location.search = "?hue=" + (hue + 4);
+      location.search = "?hue=" + (hue + 5);
     }
     down.onclick = function() {
-      location.search = "?hue=" + (hue - 4);
+      location.search = "?hue=" + (hue - 5);
     }
     downdown.onclick = function() {
-      location.search = "?hue=" + (hue - 8);
+      location.search = "?hue=" + (hue - 10);
     }
 
     popup.onclick = function() {
