--- a/square/index.html
+++ b/square/index.html
@@ -7,7 +7,7 @@
   <title>PCCS square</title>
 </head>
 <body>
-  <header>
+  <header id="title">
     <div class="title">PCCS-Palette(ver. square)</div>
   </header>
   <main class="square">
@@ -16,7 +16,7 @@
       <section id="1_2"></section>
       <section id="1_3"></section>
       <section id="1_4"></section>
-      <section id="1_5"></section>
+      <section id="1_5">(mg)</section>
       <section id="1_6"></section>
       <section id="1_7"></section>
       <section id="1_8"></section>
@@ -25,22 +25,22 @@
     <article>
       <section id="2_1"></section>
       <section id="2_2"></section>
-      <section id="2_3"></section>
-      <section id="2_4"></section>
-      <section id="2_5"></section>
-      <section id="2_6"></section>
-      <section id="2_7"></section>
+      <section id="2_3">g</section>
+      <section id="2_4">g</section>
+      <section id="2_5">(mg)</section>
+      <section id="2_6">ltg</section>
+      <section id="2_7">ltg</section>
       <section id="2_8"></section>
       <section id="2_9"></section>
     </article>
     <article>
       <section id="3_1"></section>
       <section id="3_2"></section>
-      <section id="3_3"></section>
+      <section id="3_3">g</section>
       <section id="3_4"></section>
-      <section id="3_5"></section>
+      <section id="3_5">(mg)</section>
       <section id="3_6"></section>
-      <section id="3_7"></section>
+      <section id="3_7">ltg</section>
       <section id="3_8"></section>
       <section id="3_9"></section>
     </article>
@@ -57,71 +57,74 @@
     </article>
     <article>
       <section id="5_1"></section>
-      <section id="5_2"></section>
+      <section id="5_2">dkg</section>
       <section id="5_3"></section>
-      <section id="5_4"></section>
+      <section id="5_4">d</section>
       <section id="5_5"></section>
-      <section id="5_6"></section>
+      <section id="5_6">sf</section>
       <section id="5_7"></section>
-      <section id="5_8"></section>
+      <section id="5_8">p</section>
       <section id="5_9"></section>
     </article>
     <article>
       <section id="6_1"></section>
-      <section id="6_2"></section>
-      <section id="6_3"></section>
-      <section id="6_4"></section>
+      <section id="6_2">dkg</section>
+      <section id="6_3">dk</section>
+      <section id="6_4">d</section>
       <section id="6_5"></section>
-      <section id="6_6"></section>
-      <section id="6_7"></section>
-      <section id="6_8"></section>
+      <section id="6_6">sf</section>
+      <section id="6_7">l</section>
+      <section id="6_8">p</section>
       <section id="6_9"></section>
     </article>
     <article>
       <section id="7_1"></section>
-      <section id="7_2"></section>
-      <section id="7_3"></section>
+      <section id="7_2">dkg</section>
+      <section id="7_3">dk</section>
       <section id="7_4"></section>
-      <section id="7_5"></section>
+      <section id="7_5">s</section>
       <section id="7_6"></section>
-      <section id="7_7"></section>
-      <section id="7_8"></section>
+      <section id="7_7">l</section>
+      <section id="7_8">p</section>
       <section id="7_9"></section>
     </article>
     <article>
       <section id="8_1"></section>
-      <section id="8_2"></section>
-      <section id="8_3"></section>
-      <section id="8_4"></section>
-      <section id="8_5"></section>
-      <section id="8_6"></section>
-      <section id="8_7"></section>
-      <section id="8_8"></section>
+      <section id="8_2">dkg</section>
+      <section id="8_3">dk</section>
+      <section id="8_4">dp</section>
+      <section id="8_5">s</section>
+      <section id="8_6">b</section>
+      <section id="8_7">l</section>
+      <section id="8_8">p</section>
       <section id="8_9"></section>
     </article>
     <article>
       <section id="9_1"></section>
       <section id="9_2"></section>
       <section id="9_3"></section>
-      <section id="9_4"></section>
-      <section id="9_5"></section>
-      <section id="9_6"></section>
+      <section id="9_4">dp</section>
+      <section id="9_5">v</section>
+      <section id="9_6">b</section>
       <section id="9_7"></section>
       <section id="9_8"></section>
       <section id="9_9"></section>
     </article>
-    <div id="controler" class="">
-      <div id="upup"><h2>&plus;&plus;</h2></div>
-      <div id="up"><h2>&plus;</h2></div>
-      <div id="down"><h2>&minus;</h2></div>
-      <div id="downdown"><h2>&minus;&minus;</h2></div>
-    </div>
-    <div id="popup"></div>
   </main>
+  <div id="controler" class="">
+    <div id="upup"><h2>&plus;&plus;</h2></div>
+    <div id="up"><h2>&plus;</h2></div>
+    <div id="down"><h2>&minus;</h2></div>
+    <div id="downdown"><h2>&minus;&minus;</h2></div>
+  </div>
+  <div id="popup"></div>
   <footer>
-    <a href="https://gall.dcinside.com/p_color/78162" target="_blank">Reference</a>
+    <a href="https://gall.dcinside.com/p_color/78162" target="_blank">→ Reference</a>
   </footer>
   <script type="text/javascript">
+    const box_title = document.getElementById('title');
+    const box_controler = document.getElementById('controler');
+
     const box_1_1 = document.getElementById('1_1');
     const box_1_2 = document.getElementById('1_2');
     const box_1_3 = document.getElementById('1_3');
@@ -222,10 +225,13 @@
 
     // 색상값 설정
 
-    upup.style.backgroundColor = "hsl(" + (hue + 32) + ", 100%, 50%)";
-    up.style.backgroundColor = "hsl(" + (hue + 16) + ", 100%, 50%)";
-    down.style.backgroundColor = "hsl(" + (hue - 16) + ", 100%, 50%)";
-    downdown.style.backgroundColor = "hsl(" + (hue - 32) + ", 100%, 50%)";
+    box_title.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
+    box_controler.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
+
+    upup.style.backgroundColor = "hsl(" + (hue + 20) + ", 80%, 80%)";
+    up.style.backgroundColor = "hsl(" + (hue + 10) + ", 80%, 80%)";
+    down.style.backgroundColor = "hsl(" + (hue - 10) + ", 80%, 80%)";
+    downdown.style.backgroundColor = "hsl(" + (hue - 20) + ", 80%, 80%)";
 
     box_1_1.style.backgroundColor = "hsl(" + hue + ", 10%, 10%)";
     box_1_2.style.backgroundColor = "hsl(" + hue + ", 10%, 20%)";
@@ -310,16 +316,16 @@
     box_9_9.style.backgroundColor = "hsl(" + hue + ", 90%, 90%)";
 
     upup.onclick = function() {
-      location.search = "?hue=" + (hue + 8);
+      location.search = "?hue=" + (hue + 10);
     }
     up.onclick = function() {
-      location.search = "?hue=" + (hue + 4);
+      location.search = "?hue=" + (hue + 5);
     }
     down.onclick = function() {
-      location.search = "?hue=" + (hue - 4);
+      location.search = "?hue=" + (hue - 5);
     }
     downdown.onclick = function() {
-      location.search = "?hue=" + (hue - 8);
+      location.search = "?hue=" + (hue - 10);
     }
 
     popup.onclick = function() {
