--- a/16bit/index.html
+++ b/16bit/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header id="title">
-    <div class="title">PCCS-Palette(ver. square)</div>
+    <div class="title">PCCS-Palette [16bit]</div>
   </header>
   <main class="square">
     <article>
@@ -261,24 +261,35 @@
       <section id="e_f"></section>
     </article>
     <article>
-      <section id="f_1"></section>
-      <section id="f_2"></section>
-      <section id="f_3"></section>
-      <section id="f_4"></section>
-      <section id="f_5"></section>
-      <section id="f_6"></section>
-      <section id="f_7"></section>
-      <section id="f_8"></section>
-      <section id="f_9"></section>
-      <section id="f_a"></section>
-      <section id="f_b"></section>
-      <section id="f_c"></section>
-      <section id="f_d"></section>
-      <section id="f_e"></section>
-      <section id="f_f"></section>
+      <section id="f_1" onclick="open_popup('f','1')"></section>
+      <section id="f_2" onclick="open_popup('f','2')"></section>
+      <section id="f_3" onclick="open_popup('f','3')"></section>
+      <section id="f_4" onclick="open_popup('f','4')"></section>
+      <section id="f_5" onclick="open_popup('f','5')"></section>
+      <section id="f_6" onclick="open_popup('f','6')"></section>
+      <section id="f_7" onclick="open_popup('f','7')"></section>
+      <section id="f_8" onclick="open_popup('f','8')"></section>
+      <section id="f_9" onclick="open_popup('f','9')"></section>
+      <section id="f_a" onclick="open_popup('f','a')"></section>
+      <section id="f_b" onclick="open_popup('f','b')"></section>
+      <section id="f_c" onclick="open_popup('f','c')"></section>
+      <section id="f_d" onclick="open_popup('f','d')"></section>
+      <section id="f_e" onclick="open_popup('f','e')"></section>
+      <section id="f_f" onclick="open_popup('f','f')"></section>
     </article>
+    <script type="text/javascript">
+    for (var i = 1; i < 16; i++) {
+      document.write("<section>");
+      for (var j = 1; j < 16; j++) {
+        var i_ = i.toString(16);
+        var j_ = j.toString(16);
+        document.write('<section id="'+i_+'_'+j_+'" onclick="open_popup(\''+i_+'\',\''+j_+'\')"></section>');
+      }
+      document.write("</section>");
+    }
+    </script>
   </main>
-  <div id="controler" class="">
+  <div id="controler" class="" style="max-width: 30rem;margin: auto;margin-top: 1rem;margin-bottom: 1rem;">
     <div id="upup"><h2>&plus;&plus;</h2></div>
     <div id="up"><h2>&plus;</h2></div>
     <div id="down"><h2>&minus;</h2></div>
@@ -291,6 +302,7 @@
   <script type="text/javascript">
     const box_title = document.getElementById('title');
     const box_controler = document.getElementById('controler');
+    const box_popup = document.getElementById('popup');
 
     var hue = parseInt(new URLSearchParams(location.search).get('hue'));
     if (isNaN(hue)) {
@@ -306,6 +318,7 @@
     // 색상값 설정
 
     box_title.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
+    box_title.style.color = "hsl(" + hue + ", 30%, 70%)";
     box_controler.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
 
     upup.style.backgroundColor = "hsl(" + (hue + 20) + ", 80%, 80%)";
@@ -319,7 +332,13 @@
         var v_l = j * 6.25;
         var h = i.toString(16);
         var l = j.toString(16);
-        document.getElementById(h+'_'+l).style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
+        var target = document.getElementById(h+'_'+l);
+        box_popup.innerHTML += "<div id='full_"+h+"_"+l+"' onclick='close_popup(\""+h+"\",\""+l+"\")'></div>";
+        target.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
+        document.getElementById('full_'+h+'_'+l).style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
+        if (i + j < 20) {
+          target.style.color = "hsl("+hue+","+v_h+"%,"+(v_l+80)+"%)";
+        }
       }
     }
 
@@ -336,12 +355,11 @@
       location.search = "?hue=" + (hue - 10);
     }
 
-    popup.onclick = function() {
-      popup.style.display = "none";
+    function open_popup(x,y) {
+      document.getElementById('full_'+x+'_'+y).style.display = "block";
     }
-
-    function open_popup() {
-      popup.style.display = "flex";
+    function close_popup(x,y) {
+      document.getElementById('full_'+x+'_'+y).style.display = "none";
     }
   </script>
 </body>
