--- a/16bit/index.html
+++ b/16bit/index.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="../pccs.css">
   <style media="screen">
   main section {
-    width: 25px !important;
-    height: 25px !important;
+    width: 27px !important;
+    height: 27px !important;
     font-size: 0.7rem;
+    overflow: hidden;
   }
   /* main section.main_color {
     width: 28px !important;
@@ -22,270 +23,15 @@
     <div class="title">PCCS-Palette [16bit]</div>
   </header>
   <main class="square">
-    <article>
-      <section id="1_1"></section>
-      <section id="1_2"></section>
-      <section id="1_3"></section>
-      <section id="1_4"></section>
-      <section id="1_5"></section>
-      <section id="1_6"></section>
-      <section id="1_7"></section>
-      <section id="1_8"></section>
-      <section id="1_9"></section>
-      <section id="1_a"></section>
-      <section id="1_b"></section>
-      <section id="1_c"></section>
-      <section id="1_d"></section>
-      <section id="1_e"></section>
-      <section id="1_f"></section>
-    </article>
-    <article>
-      <section id="2_1"></section>
-      <section id="2_2"></section>
-      <section id="2_3"></section>
-      <section id="2_4"></section>
-      <section id="2_5"></section>
-      <section id="2_6"></section>
-      <section id="2_7"></section>
-      <section id="2_8"></section>
-      <section id="2_9"></section>
-      <section id="2_a"></section>
-      <section id="2_b"></section>
-      <section id="2_c"></section>
-      <section id="2_d"></section>
-      <section id="2_e"></section>
-      <section id="2_f"></section>
-    </article>
-    <article>
-      <section id="3_1"></section>
-      <section id="3_2"></section>
-      <section id="3_3"></section>
-      <section id="3_4"></section>
-      <section id="3_5" class="main_color">g</section>
-      <section id="3_6" class="main_color">g</section>
-      <section id="3_7" class="">(mg)</section>
-      <section id="3_8" class="">(mg)</section>
-      <section id="3_9"></section>
-      <section id="3_a"></section>
-      <section id="3_b"></section>
-      <section id="3_c"></section>
-      <section id="3_d"></section>
-      <section id="3_e"></section>
-      <section id="3_f"></section>
-    </article>
-    <article>
-      <section id="4_1"></section>
-      <section id="4_2"></section>
-      <section id="4_3" class="main_color">dkg</section>
-      <section id="4_4"></section>
-      <section id="4_5" class="main_color">g</section>
-      <section id="4_6" class="main_color">g</section>
-      <section id="4_7" class="">(mg)</section>
-      <section id="4_8" class="">(mg)</section>
-      <section id="4_9"></section>
-      <section id="4_a" class="main_color">ltg</section>
-      <section id="4_b" class="main_color">ltg</section>
-      <section id="4_c"></section>
-      <section id="4_d"></section>
-      <section id="4_e"></section>
-      <section id="4_f"></section>
-    </article>
-    <article>
-      <section id="5_1"></section>
-      <section id="5_2"></section>
-      <section id="5_3" class="main_color">dkg</section>
-      <section id="5_4"></section>
-      <section id="5_5" class="main_color">g</section>
-      <section id="5_6" class="main_color">g</section>
-      <section id="5_7"></section>
-      <section id="5_8"></section>
-      <section id="5_9"></section>
-      <section id="5_a" class="main_color">ltg</section>
-      <section id="5_b" class="main_color">ltg</section>
-      <section id="5_c"></section>
-      <section id="5_d"></section>
-      <section id="5_e"></section>
-      <section id="5_f"></section>
-    </article>
-    <article>
-      <section id="6_1"></section>
-      <section id="6_2"></section>
-      <section id="6_3" class="main_color">dkg</section>
-      <section id="6_4"></section>
-      <section id="6_5" class="main_color">g</section>
-      <section id="6_6"></section>
-      <section id="6_7"></section>
-      <section id="6_8"></section>
-      <section id="6_9"></section>
-      <section id="6_a" class="main_color">ltg</section>
-      <section id="6_b" class="main_color">ltg</section>
-      <section id="6_c"></section>
-      <section id="6_d"></section>
-      <section id="6_e">vp</section>
-      <section id="6_f">vp</section>
-    </article>
-    <article>
-      <section id="7_1"></section>
-      <section id="7_2">dkg</section>
-      <section id="7_3" class="main_color">dkg</section>
-      <section id="7_4"></section>
-      <section id="7_5"></section>
-      <section id="7_6"></section>
-      <section id="7_7"></section>
-      <section id="7_8"></section>
-      <section id="7_9"></section>
-      <section id="7_a"></section>
-      <section id="7_b" class="main_color">ltg</section>
-      <section id="7_c"></section>
-      <section id="7_d"></section>
-      <section id="7_e">vp</section>
-      <section id="7_f">vp</section>
-    </article>
-    <article>
-      <section id="8_1"></section>
-      <section id="8_2">dkg</section>
-      <section id="8_3">dk</section>
-      <section id="8_4" class="main_color">dkg</section>
-      <section id="8_5">s</section>
-      <section id="8_6"></section>
-      <section id="8_7"></section>
-      <section id="8_8" class="main_color">sf</section>
-      <section id="8_9" class="main_color">sf</section>
-      <section id="8_a"></section>
-      <section id="8_b"></section>
-      <section id="8_c"></section>
-      <section id="8_d"></section>
-      <section id="8_e">vp</section>
-      <section id="8_f">vp</section>
-    </article>
-    <article>
-      <section id="9_1"></section>
-      <section id="9_2"></section>
-      <section id="9_3"></section>
-      <section id="9_4">dp</section>
-      <section id="9_5">v</section>
-      <section id="9_6">b</section>
-      <section id="9_7"></section>
-      <section id="9_8" class="main_color">sf</section>
-      <section id="9_9" class="main_color">sf</section>
-      <section id="9_a" class="main_color">sf</section>
-      <section id="9_b"></section>
-      <section id="9_c"></section>
-      <section id="9_d"></section>
-      <section id="9_e">vp</section>
-      <section id="9_f">vp</section>
-    </article>
-    <article>
-      <section id="a_1"></section>
-      <section id="a_2"></section>
-      <section id="a_3"></section>
-      <section id="a_4">dp</section>
-      <section id="a_5">v</section>
-      <section id="a_6">b</section>
-      <section id="a_7"></section>
-      <section id="a_8"></section>
-      <section id="a_9" class="main_color">sf</section>
-      <section id="a_a" class="main_color">sf</section>
-      <section id="a_b"></section>
-      <section id="a_c"></section>
-      <section id="a_d"></section>
-      <section id="a_e"></section>
-      <section id="a_f"></section>
-    </article>
-    <article>
-      <section id="b_1"></section>
-      <section id="b_2"></section>
-      <section id="b_3"></section>
-      <section id="b_4">dp</section>
-      <section id="b_5">v</section>
-      <section id="b_6">b</section>
-      <section id="b_7"></section>
-      <section id="b_8"></section>
-      <section id="b_9"></section>
-      <section id="b_a"></section>
-      <section id="b_b"></section>
-      <section id="b_c"></section>
-      <section id="b_d">p</section>
-      <section id="b_e"></section>
-      <section id="b_f"></section>
-    </article>
-    <article>
-      <section id="c_1"></section>
-      <section id="c_2"></section>
-      <section id="c_3"></section>
-      <section id="c_4">dp</section>
-      <section id="c_5">v</section>
-      <section id="c_6">b</section>
-      <section id="c_7"></section>
-      <section id="c_8"></section>
-      <section id="c_9"></section>
-      <section id="c_a">l:b</section>
-      <section id="c_b">l</section>
-      <section id="c_c"></section>
-      <section id="c_d">p</section>
-      <section id="c_e"></section>
-      <section id="c_f"></section>
-    </article>
-    <article>
-      <section id="d_1"></section>
-      <section id="d_2"></section>
-      <section id="d_3"></section>
-      <section id="d_4">dp</section>
-      <section id="d_5">v</section>
-      <section id="d_6">b</section>
-      <section id="d_7"></section>
-      <section id="d_8"></section>
-      <section id="d_9"></section>
-      <section id="d_a">l:b</section>
-      <section id="d_b">l</section>
-      <section id="d_c">p:l</section>
-      <section id="d_d">p</section>
-      <section id="d_e"></section>
-      <section id="d_f"></section>
-    </article>
-    <article>
-      <section id="e_1"></section>
-      <section id="e_2"></section>
-      <section id="e_3"></section>
-      <section id="e_4">dp</section>
-      <section id="e_5">v</section>
-      <section id="e_6">b</section>
-      <section id="e_7"></section>
-      <section id="e_8"></section>
-      <section id="e_9"></section>
-      <section id="e_a">l:b</section>
-      <section id="e_b">l</section>
-      <section id="e_c">p:l</section>
-      <section id="e_d">p</section>
-      <section id="e_e"></section>
-      <section id="e_f"></section>
-    </article>
-    <article>
-      <section id="f_1" onclick="open_popup('f','1')"></section>
-      <section id="f_2" onclick="open_popup('f','2')"></section>
-      <section id="f_3" onclick="open_popup('f','3')"></section>
-      <section id="f_4" onclick="open_popup('f','4')"></section>
-      <section id="f_5" onclick="open_popup('f','5')"></section>
-      <section id="f_6" onclick="open_popup('f','6')"></section>
-      <section id="f_7" onclick="open_popup('f','7')"></section>
-      <section id="f_8" onclick="open_popup('f','8')"></section>
-      <section id="f_9" onclick="open_popup('f','9')"></section>
-      <section id="f_a" onclick="open_popup('f','a')"></section>
-      <section id="f_b" onclick="open_popup('f','b')"></section>
-      <section id="f_c" onclick="open_popup('f','c')"></section>
-      <section id="f_d" onclick="open_popup('f','d')"></section>
-      <section id="f_e" onclick="open_popup('f','e')"></section>
-      <section id="f_f" onclick="open_popup('f','f')"></section>
-    </article>
     <script type="text/javascript">
-    for (var i = 1; i < 16; i++) {
-      document.write("<section>");
-      for (var j = 1; j < 16; j++) {
+    for (var i = 3; i <= 16; i++) {
+      document.write("<article>");
+      for (var j = 2; j < 16; j++) {
         var i_ = i.toString(16);
         var j_ = j.toString(16);
         document.write('<section id="'+i_+'_'+j_+'" onclick="open_popup(\''+i_+'\',\''+j_+'\')"></section>');
       }
-      document.write("</section>");
+      document.write("</article>");
     }
     </script>
   </main>
@@ -326,8 +72,8 @@
     down.style.backgroundColor = "hsl(" + (hue - 10) + ", 80%, 80%)";
     downdown.style.backgroundColor = "hsl(" + (hue - 20) + ", 80%, 80%)";
 
-    for (var i = 1; i < 16; i++) {
-      for (var j = 1; j < 16; j++) {
+    for (var i = 3; i <= 16; i++) {
+      for (var j = 2; j < 16; j++) {
         var v_h = i * 6.25;
         var v_l = j * 6.25;
         var h = i.toString(16);
@@ -335,9 +81,11 @@
         var target = document.getElementById(h+'_'+l);
         box_popup.innerHTML += "<div id='full_"+h+"_"+l+"' onclick='close_popup(\""+h+"\",\""+l+"\")'></div>";
         target.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
-        document.getElementById('full_'+h+'_'+l).style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
-        if (i + j < 20) {
-          target.style.color = "hsl("+hue+","+v_h+"%,"+(v_l+80)+"%)";
+        var target_ = document.getElementById('full_'+h+'_'+l);
+        target_.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
+        if (j < 8) {
+          target.style.color = "white";
+          target_.style.color = "white";
         }
       }
     }
@@ -356,11 +104,116 @@
     }
 
     function open_popup(x,y) {
-      document.getElementById('full_'+x+'_'+y).style.display = "block";
+      document.getElementById('full_'+x+'_'+y).style.display = "flex";
     }
     function close_popup(x,y) {
       document.getElementById('full_'+x+'_'+y).style.display = "none";
     }
+
+    function tag_(s,l,c) {
+      document.getElementById(s+'_'+l).innerText = c;
+      document.getElementById('full_'+s+'_'+l).innerText = c;
+    }
+
+    tag_('4','4','dkg');
+    tag_('5','4','dkg');
+    tag_('6','4','dkg');
+    tag_('7','4','dkg');
+    tag_('8','4','dkg');
+    tag_('b','4','dk:dkg');
+    tag_('c','4','dk:dkg');
+    tag_('e','4','dk');
+    tag_('f','4','dk');
+    tag_('10','4','dk');
+
+    tag_('4','5','g:dkg');
+    tag_('5','5','g:dkg');
+    tag_('6','5','g:dkg');
+    tag_('a','5','d');
+    tag_('b','5','d');
+    tag_('c','5','d:dk');
+    tag_('d','5','d:dk');
+    tag_('e','5','dp:dk');
+    tag_('f','5','dp:dk');
+    tag_('10','5','dp:dk');
+
+    tag_('4','6','g');
+    tag_('5','6','g');
+    tag_('6','6','g');
+    tag_('7','6','g');
+    tag_('8','6','d:g');
+    tag_('9','6','d');
+    tag_('a','6','d');
+    tag_('b','6','d');
+    tag_('c','6','d:dp');
+
+    tag_('4','7','g');
+    tag_('5','7','g');
+    tag_('6','7','g');
+    tag_('8','7','d:g');
+    tag_('9','7','d');
+    tag_('a','7','d');
+    tag_('c','7','s');
+    tag_('d','7','s:dp');
+    tag_('e','7','s:dp');
+    tag_('10','7','v:dp');
+
+    tag_('4','8','ltg:mg');
+    tag_('5','8','ltg:mg');//mg 중복
+    tag_('8','8','sf:d');
+    tag_('9','8','sf:d');
+    tag_('a','8','sf:d');
+    tag_('b','8','sf:s:d');
+    tag_('f','8','v');
+    tag_('10','8','v');
+
+    tag_('4','9','ltg:mg');//mg 중복
+    tag_('5','9','ltg:mg');//mg 중복
+    tag_('9','9','sf');
+    tag_('a','9','sf');
+    tag_('b','9','sf:s');
+    tag_('c','9','b');
+    tag_('d','9','b:s');
+    tag_('e','9','b:s');
+    tag_('10','9','b:v');
+
+    tag_('8','a','ltg:sf');
+    tag_('9','a','sf');
+    tag_('a','a','sf');
+    tag_('b','a','sf');
+    tag_('c','a','sf:b');
+
+    tag_('5','b','ltg');
+    tag_('6','b','ltg');
+    tag_('7','b','ltg');
+    tag_('9','b','ltg:sf');
+    tag_('a','b','sf');
+    tag_('b','b','sf');
+    tag_('c','b','l:sf');
+    tag_('e','b','l:b');
+    tag_('f','b','l:b');
+    tag_('10','b','l:b');
+
+    tag_('5','c','ltg');
+    tag_('6','c','ltg');
+    tag_('7','c','ltg');
+    tag_('8','c','ltg');
+    tag_('d','c','l:sf');
+    tag_('e','c','l');
+    tag_('f','c','l');
+    tag_('10','c','l');
+
+    tag_('8','d','p:lg');
+    tag_('9','d','p:lg');
+    tag_('d','d','p:l');
+    tag_('e','d','p:l');
+
+    tag_('9','e','p:lg');
+    tag_('b','e','p');
+    tag_('c','e','p');
+    tag_('d','e','p');
+    tag_('e','e','p');
+    tag_('f','e','p');
   </script>
 </body>
 </html>
