--- a/16bit/index.html
+++ b/16bit/index.html
@@ -12,15 +12,19 @@
     overflow: hidden;
   }
   /* main section.main_color {
-    width: 28px !important;
-    height: 28px !important;
+  width: 28px !important;
+  height: 28px !important;
   } */
   </style>
   <title>16bit Square | PCCS Palette</title>
 </head>
 <body>
-  <header id="title" style="max-width: 30rem;margin: auto;margin-bottom: 1rem;">
-    <div class="title">PCCS-Palette [16bit]</div>
+  <header id="title_bar">
+    <div id="title_image">N</div>
+    <div id="title">PCCS Palette [16bit]</div>
+    <div id="indicator">
+      <span id="indicator_">dfsf</span>
+    </div>
   </header>
   <main class="square">
     <script type="text/javascript">
@@ -36,200 +40,289 @@
     </script>
   </main>
   <div id="controler" class="" style="max-width: 30rem;margin: auto;margin-top: 1rem;margin-bottom: 1rem;">
-    <div id="upup"><h2>&plus;&plus;</h2></div>
-    <div id="up"><h2>&plus;</h2></div>
-    <div id="down"><h2>&minus;</h2></div>
-    <div id="downdown"><h2>&minus;&minus;</h2></div>
+    <div id="upup" class="multi">
+      <svg xmlns="http://www.w3.org/2000/svg" width="4rem" height="4rem" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+      </svg>
+    </div>
+    <div id="up" style="">
+      <svg xmlns="http://www.w3.org/2000/svg" width="3rem" height="3rem" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+      </svg>
+    </div>
+    <div id="down" style="">
+      <svg xmlns="http://www.w3.org/2000/svg" width="3rem" height="3rem" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
+        <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+      </svg>
+    </div>
+    <div id="downdown" class="multi">
+      <svg xmlns="http://www.w3.org/2000/svg" width="4rem" height="4rem" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
+        <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
+      </svg>
+    </div>
   </div>
   <div id="popup"></div>
   <footer>
-    <a href="https://gall.dcinside.com/p_color/78192" target="_blank">→ Reference</a>
+    <a href="https://gall.dcinside.com/p_color/78192" target="_blank">→ Reference 1</a>
+    <a href="https://gall.dcinside.com/p_color/86472" target="_blank">→ Reference 2</a>
   </footer>
   <script type="text/javascript">
-    const box_title = document.getElementById('title');
-    const box_controler = document.getElementById('controler');
-    const box_popup = document.getElementById('popup');
+  const box_title = document.getElementById('title_bar');
+  const box_title_image = document.getElementById('title_image');
+  const box_controler = document.getElementById('controler');
+  const box_indicator = document.getElementById('indicator_');
+  const box_popup = document.getElementById('popup');
 
-    var hue = parseInt(new URLSearchParams(location.search).get('hue'));
-    if (isNaN(hue)) {
-      location.search = "?hue=0";
-    }
-    if (hue > 360) {
-      location.search = "?hue=" + (hue - 360);
-    }
-    if (hue < 0) {
-      location.search = "?hue=" + (hue + 360);
-    }
+  var hue = parseInt(new URLSearchParams(location.search).get('hue'));
+  if (isNaN(hue)) {
+    location.search = "?hue=0";
+  }
+  if (hue > 360) {
+    location.search = "?hue=" + (hue - 360);
+  }
+  if (hue < 0) {
+    location.search = "?hue=" + (hue + 360);
+  }
 
-    // 색상값 설정
-
-    box_title.style.backgroundColor = "hsl(" + hue + ", 70%, 30%)";
-    if (hue > 60 && hue < 240) {
-      box_controler.style.background = "linear-gradient(to right, #44b, #bb4)";
+  //indicator
+  function indic(x, y) {
+    if (x > 0) {
+      box_indicator.innerText = y;
+      box_indicator.style.backgroundColor = "deepskyblue";
     } else {
-      box_controler.style.background = "linear-gradient(to left, #44b, #bb4)";
+      box_indicator.innerText = y;
+      box_indicator.style.backgroundColor = "yellow";
     }
+  }
+  switch (true) {
+    case (hue < 18):
+    indic(0, "#웜레드");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 47):
+    indic(0, "#주황");
+    box_title_image.innerText = "N";
+    break;
+    case (hue < 62):
+    indic(0, "#웜노랑");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 81):
+    indic(1, "#쿨노랑");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 164):
+    indic(0, "#웜초록");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 187):
+    indic(1, "#쿨민트");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 237):
+    indic(0, "#웜파랑");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 242):
+    indic(0, "#미지근파랑");
+    box_title_image.innerText = "N";
+    break;
+    case (hue < 273):
+    indic(1, "#쿨파랑");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 290):
+    indic(0, "#웜보라");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 322):
+    indic(1, "#쿨보라");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 332):
+    indic(1, "#쿨핑크");
+    box_title_image.innerText = "C";
+    break;
+    case (hue < 341):
+    indic(0, "#웜핑크");
+    box_title_image.innerText = "W";
+    break;
+    case (hue < 351):
+    indic(0, "#미지근마젠타");
+    box_title_image.innerText = "N";
+    break;
+    default:
+    indic(1,"#쿨레드");
+    box_title_image.innerText = "C";
+  }
 
-    upup.style.backgroundColor = "hsl(" + (hue + 20) + ", 80%, 80%)";
-    up.style.backgroundColor = "hsl(" + (hue + 10) + ", 80%, 80%)";
-    down.style.backgroundColor = "hsl(" + (hue - 10) + ", 80%, 80%)";
-    downdown.style.backgroundColor = "hsl(" + (hue - 20) + ", 80%, 80%)";
+  // 색상값 설정
+  box_title.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
+  box_title_image.style.backgroundColor = "hsl(" + hue + ", 50%, 20%)";
+  box_title_image.style.color = "hsl(" + hue + ", 50%, 50%)";
+  document.getElementById('title').style.color = "hsl(" + hue + ", 50%, 20%)";
+  box_controler.style.backgroundColor = "hsl(" + hue + ", 50%, 50%)";
 
-    for (var i = 3; i <= 16; i++) {
-      for (var j = 2; j < 16; j++) {
-        var v_h = i * 6.25;
-        var v_l = j * 6.25;
-        var h = i.toString(16);
-        var l = j.toString(16);
-        var target = document.getElementById(h+'_'+l);
-        box_popup.innerHTML += "<div id='full_"+h+"_"+l+"' onclick='close_popup(\""+h+"\",\""+l+"\")'></div>";
-        target.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
-        var target_ = document.getElementById('full_'+h+'_'+l);
-        target_.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
-        if (j < 8) {
-          target.style.color = "white";
-          target_.style.color = "white";
-        }
+  upup.style.backgroundColor = "hsl(" + (hue + 30) + ", 80%, 80%)";
+  up.style.backgroundColor = "hsl(" + (hue + 15) + ", 80%, 80%)";
+  down.style.backgroundColor = "hsl(" + (hue - 15) + ", 80%, 80%)";
+  downdown.style.backgroundColor = "hsl(" + (hue - 30) + ", 80%, 80%)";
+
+  for (var i = 3; i <= 16; i++) {
+    for (var j = 2; j < 16; j++) {
+      var v_h = i * 6.25;
+      var v_l = j * 6.25;
+      var h = i.toString(16);
+      var l = j.toString(16);
+      var target = document.getElementById(h+'_'+l);
+      box_popup.innerHTML += "<div id='full_"+h+"_"+l+"' onclick='close_popup(\""+h+"\",\""+l+"\")'></div>";
+      target.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
+      var target_ = document.getElementById('full_'+h+'_'+l);
+      target_.style.backgroundColor = "hsl("+hue+","+v_h+"%,"+v_l+"%)";
+      if (j < 8) {
+        target.style.color = "white";
+        target_.style.color = "white";
       }
     }
+  }
 
-    upup.onclick = function() {
-      location.search = "?hue=" + (hue + 10);
-    }
-    up.onclick = function() {
-      location.search = "?hue=" + (hue + 5);
-    }
-    down.onclick = function() {
-      location.search = "?hue=" + (hue - 5);
-    }
-    downdown.onclick = function() {
-      location.search = "?hue=" + (hue - 10);
-    }
+  upup.onclick = function() {
+    location.search = "?hue=" + (hue + 10);
+  }
+  up.onclick = function() {
+    location.search = "?hue=" + (hue + 5);
+  }
+  down.onclick = function() {
+    location.search = "?hue=" + (hue - 5);
+  }
+  downdown.onclick = function() {
+    location.search = "?hue=" + (hue - 10);
+  }
 
-    function open_popup(x,y) {
-      document.getElementById('full_'+x+'_'+y).style.display = "flex";
-    }
-    function close_popup(x,y) {
-      document.getElementById('full_'+x+'_'+y).style.display = "none";
-    }
+  function open_popup(x,y) {
+    document.getElementById('full_'+x+'_'+y).style.display = "flex";
+  }
+  function close_popup(x,y) {
+    document.getElementById('full_'+x+'_'+y).style.display = "none";
+  }
 
-    function tag_(s,l,c) {
-      document.getElementById(s+'_'+l).innerText = c;
-      document.getElementById('full_'+s+'_'+l).innerText = c;
-    }
+  function tag_(s,l,c) {
+    document.getElementById(s+'_'+l).innerText = c;
+    document.getElementById('full_'+s+'_'+l).innerText = c;
+  }
 
-    tag_('4','4','dkg');
-    tag_('5','4','dkg');
-    tag_('6','4','dkg');
-    tag_('7','4','dkg');
-    tag_('8','4','dkg');
-    tag_('b','4','dk:dkg');
-    tag_('c','4','dk:dkg');
-    tag_('e','4','dk');
-    tag_('f','4','dk');
-    tag_('10','4','dk');
+  tag_('4','4','dkg');
+  tag_('5','4','dkg');
+  tag_('6','4','dkg');
+  tag_('7','4','dkg');
+  tag_('8','4','dkg');
+  tag_('b','4','dk:dkg');
+  tag_('c','4','dk:dkg');
+  tag_('e','4','dk');
+  tag_('f','4','dk');
+  tag_('10','4','dk');
 
-    tag_('4','5','g:dkg');
-    tag_('5','5','g:dkg');
-    tag_('6','5','g:dkg');
-    tag_('a','5','d');
-    tag_('b','5','d');
-    tag_('c','5','d:dk');
-    tag_('d','5','d:dk');
-    tag_('e','5','dp:dk');
-    tag_('f','5','dp:dk');
-    tag_('10','5','dp:dk');
+  tag_('4','5','g:dkg');
+  tag_('5','5','g:dkg');
+  tag_('6','5','g:dkg');
+  tag_('a','5','d');
+  tag_('b','5','d');
+  tag_('c','5','d:dk');
+  tag_('d','5','d:dk');
+  tag_('e','5','dp:dk');
+  tag_('f','5','dp:dk');
+  tag_('10','5','dp:dk');
 
-    tag_('4','6','g');
-    tag_('5','6','g');
-    tag_('6','6','g');
-    tag_('7','6','g');
-    tag_('8','6','d:g');
-    tag_('9','6','d');
-    tag_('a','6','d');
-    tag_('b','6','d');
-    tag_('c','6','d:dp');
-    tag_('d','6','dp');
-    tag_('e','6','dp');
-    tag_('f','6','dp');
+  tag_('4','6','g');
+  tag_('5','6','g');
+  tag_('6','6','g');
+  tag_('7','6','g');
+  tag_('8','6','d:g');
+  tag_('9','6','d');
+  tag_('a','6','d');
+  tag_('b','6','d');
+  tag_('c','6','d:dp');
+  tag_('d','6','dp');
+  tag_('e','6','dp');
+  tag_('f','6','dp');
 
-    tag_('4','7','g');
-    tag_('5','7','g');
-    tag_('6','7','g');
-    tag_('8','7','d:g');
-    tag_('9','7','d');
-    tag_('a','7','d');
-    tag_('d','7','s:dp');
-    tag_('e','7','s:dp');
-    tag_('10','7','v:dp');
+  tag_('4','7','g');
+  tag_('5','7','g');
+  tag_('6','7','g');
+  tag_('8','7','d:g');
+  tag_('9','7','d');
+  tag_('a','7','d');
+  tag_('d','7','s:dp');
+  tag_('e','7','s:dp');
+  tag_('10','7','v:dp');
 
-    tag_('4','8','ltg:g');
-    tag_('5','8','ltg:g');//mg 중복
-    tag_('8','8','sf:d');
-    tag_('9','8','sf:d');
-    tag_('a','8','sf:d');
-    tag_('b','8','sf:s:d');
-    tag_('c','8','s');
-    tag_('d','8','s');
-    tag_('e','8','s');
-    tag_('f','8','v');
-    tag_('10','8','v');
+  tag_('4','8','ltg:g');
+  tag_('5','8','ltg:g');//mg 중복
+  tag_('8','8','sf:d');
+  tag_('9','8','sf:d');
+  tag_('a','8','sf:d');
+  tag_('b','8','sf:s:d');
+  tag_('c','8','s');
+  tag_('d','8','s');
+  tag_('e','8','s');
+  tag_('f','8','v');
+  tag_('10','8','v');
 
-    tag_('4','9','ltg:g');//mg 중복
-    tag_('5','9','ltg:g');//mg 중복
-    tag_('9','9','sf');
-    tag_('a','9','sf');
-    tag_('b','9','sf:s');
-    tag_('c','9','');
-    tag_('d','9','b:s');
-    tag_('e','9','b:s');
-    tag_('10','9','b:v');
+  tag_('4','9','ltg:g');//mg 중복
+  tag_('5','9','ltg:g');//mg 중복
+  tag_('9','9','sf');
+  tag_('a','9','sf');
+  tag_('b','9','sf:s');
+  tag_('c','9','');
+  tag_('d','9','b:s');
+  tag_('e','9','b:s');
+  tag_('10','9','b:v');
 
-    tag_('8','a','ltg:sf');
-    tag_('9','a','sf');
-    tag_('a','a','sf');
-    tag_('b','a','sf');
-    tag_('c','a','sf:b');
-    tag_('d','a','b');
-    tag_('e','a','b');
-    tag_('f','a','b');
+  tag_('8','a','ltg:sf');
+  tag_('9','a','sf');
+  tag_('a','a','sf');
+  tag_('b','a','sf');
+  tag_('c','a','sf:b');
+  tag_('d','a','b');
+  tag_('e','a','b');
+  tag_('f','a','b');
 
-    tag_('5','b','ltg');
-    tag_('6','b','ltg');
-    tag_('7','b','ltg');
-    tag_('9','b','ltg:sf');
-    tag_('a','b','sf');
-    tag_('b','b','sf');
-    tag_('c','b','l:sf');
-    tag_('e','b','l:b');
-    tag_('f','b','l:b');
-    tag_('10','b','l:b');
+  tag_('5','b','ltg');
+  tag_('6','b','ltg');
+  tag_('7','b','ltg');
+  tag_('9','b','ltg:sf');
+  tag_('a','b','sf');
+  tag_('b','b','sf');
+  tag_('c','b','l:sf');
+  tag_('e','b','l:b');
+  tag_('f','b','l:b');
+  tag_('10','b','l:b');
 
-    tag_('5','c','ltg');
-    tag_('6','c','ltg');
-    tag_('7','c','ltg');
-    tag_('8','c','ltg');
-    tag_('d','c','l:sf');
-    tag_('e','c','l');
-    tag_('f','c','l');
-    tag_('10','c','l');
+  tag_('5','c','ltg');
+  tag_('6','c','ltg');
+  tag_('7','c','ltg');
+  tag_('8','c','ltg');
+  tag_('d','c','l:sf');
+  tag_('e','c','l');
+  tag_('f','c','l');
+  tag_('10','c','l');
 
-    tag_('8','d','p:lg');
-    tag_('9','d','p:lg');
-    tag_('d','d','p:l');
-    tag_('e','d','p:l');
+  tag_('8','d','p:lg');
+  tag_('9','d','p:lg');
+  tag_('d','d','p:l');
+  tag_('e','d','p:l');
 
-    tag_('9','e','p:lg');
-    tag_('b','e','p');
-    tag_('c','e','p');
-    tag_('d','e','p');
-    tag_('e','e','p');
-    tag_('f','e','p');
+  tag_('9','e','p:lg');
+  tag_('b','e','p');
+  tag_('c','e','p');
+  tag_('d','e','p');
+  tag_('e','e','p');
+  tag_('f','e','p');
 
-    tag_('6','f','(vp)');
-    tag_('7','f','(vp)');
-    tag_('8','f','(vp)');
-    tag_('9','f','(vp)');
+  tag_('6','f','(vp)');
+  tag_('7','f','(vp)');
+  tag_('8','f','(vp)');
+  tag_('9','f','(vp)');
   </script>
 </body>
 </html>
